k8s/sleepr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepr
  # !The annotations config is specific to AWS EKS and doesn't apply to GCP
  annotations:
    alb.ingress.kubernetes.io/schema: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
